fixes and updates for better async work