@@ -8,10 +8,10 @@ import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 import static tech.deplant.java4ever.binding.ffi.tc_string_data_t.*;
 
 class NativeStrings {
-	public static MemorySegment toRust(final String text, final Arena arena) {
-		MemorySegment nativeString = arena.allocateUtf8String(text);
-		MemorySegment stringDataSegment = arena.allocate(constants$0.const$0);
-		content$set(stringDataSegment, 0, nativeString); //TODO dubious, recheck
+	public static MemorySegment toRust(final String text, final Arena nativeSession) {
+		MemorySegment nativeString = nativeSession.allocateUtf8String(text);
+		MemorySegment stringDataSegment = nativeSession.allocate(constants$0.const$0);
+		content$set(stringDataSegment, 0, nativeString);
 		len$set(stringDataSegment,
 		        0,
 		        ((int) nativeString.byteSize()) - 1
@@ -20,12 +20,10 @@ class NativeStrings {
 		return stringDataSegment;
 	}
 
-	public static String toJava(MemorySegment seg, Arena arena) {
+	public static String toJava(MemorySegment seg) {
 		if (tc_string_data_t.len$get(seg) > 0) {
-			MemorySegment contentAddress = tc_string_data_t.content$get(seg);
-			MemorySegment content = contentAddress.asSlice(0, len$get(seg));
-			byte[] str = content.toArray(JAVA_BYTE);
-			return new String(str, StandardCharsets.UTF_8);
+			final MemorySegment content = tc_string_data_t.content$get(seg).asSlice(0, len$get(seg));
+			return new String(content.toArray(JAVA_BYTE), StandardCharsets.UTF_8);
 		} else {
 			return "";
 		}
